modify 5.saltstack.md,add memcached,nginx,php for 201901060004

--- a/5.Saltstack.md
+++ b/5.Saltstack.md
@@ -1,4 +1,4 @@
-#Saltstack深入
+﻿#Saltstack深入
 ####YAML语法：
 简介：YAML语法写成sls描述文件，sls全称：Salt State
 <pre>
@@ -336,7 +336,7 @@ pillar_roots:
 /etc/bashrc:
   file.append:
     - text:
-      - export PROMPT_COMMAND='{ msg=$(history 1 | { read x y; echo $y; });logger "[euid=$(whoami)]":$(whoami):[`pwd`]"$msg"; }'
+      - export PROMPT_COMMAND='{ msg=$(history 1 | { read x y; echo $y; });logger "[euid=$(whoami)]":$(who am i):[`pwd`]"$msg"; }'
 #sysctl.sls----内核参数优化
 [root@SaltstackServer /srv/salt/base/init]# cat sysctl.sls 
 net.ipv4.ip_local_port_range:    #客户端打口随机端口范围
@@ -900,11 +900,11 @@ keepalived-server:
     - user: root
     - group: root
     - template: jinja
-    {% if grains['fqdn'] == 'SaltstackServer.com' %}
+    {% if grains['fqdn'] == 'Linux-node3-salt' %}
     - ROUTEID: haproxy_ha
     - STATEID: MASTER
     - PRIORITYID: 150
-    {% elif grains['fqdn'] == 'linux-node1' %}
+    {% elif grains['fqdn'] == 'Linux-node4-salt' %}
     - ROUTEID: haproxy_ha
     - STATEID: BACKUP
     - PRIORITYID: 100
@@ -948,13 +948,930 @@ base:
   '*':
     - init.init
 prod:
-  '*':
+  'Linux-node3*':
+    - cluster.haproxy-outside
+    - cluster.haproxy-outside-keepalived
+  'Linux-node4*':
     - cluster.haproxy-outside
     - cluster.haproxy-outside-keepalived
 ---------------------------------------------------------
-[root@SaltstackServer /srv/salt/prod/cluster/files]# salt -L 'SaltstackServer.com,linux-node1' state.highstate
+[root@SaltstackServer /srv/salt/prod/cluster/files]# salt '*' state.highstate
+
+##memcached部署
+1. session保持
+2. session复制
+3. session共享（php把session写到memcached上，session用于唯一标识，php与可以写入到redis，但memcached单纯的写和读优于redis）
+[root@salt-server /srv/salt/prod]# tree
+.
+├── bbs
+│?? └── memcached.sls
+├── cluster
+│?? ├── files
+│?? │?? ├── haproxy-outside.cfg.template
+│?? │?? └── haproxy-outside-keepalived.conf
+│?? ├── haproxy-outside-keepalived.sls
+│?? └── haproxy-outside.sls
+└── modules
+    ├── haproxy
+    │?? ├── files
+    │?? │?? ├── haproxy-1.9.0.tar.gz
+    │?? │?? └── haproxy.init
+    │?? └── install.sls
+    ├── keepalived
+    │?? ├── files
+    │?? │?? ├── keepalived-1.2.17.tar.gz
+    │?? │?? ├── keepalived.init
+    │?? │?? └── keepalived.sysconfig
+    │?? └── install.sls
+    ├── libevent
+    │?? ├── files
+    │?? │?? └── libevent-2.0.22-stable.tar.gz
+    │?? └── install.sls
+    ├── memcached
+    │?? ├── files
+    │?? │?? └── memcached-1.4.24.tar.gz
+    │?? └── install.sls
+    ├── nginx
+    ├── php
+    ├── pkg
+    │?? └── make.sls
+    └── user
+        └── www.sls
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod]# cat modules/user/www.sls 
+www-user-group:
+  group.present:
+    - name: www
+    - gid: 1000
+
+  user.present:
+    - name: www
+    - fullname: www
+    - shell: /sbin/nologin
+    - uid: 1000
+    - gid: 1000
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod]# cat modules/libevent/install.sls 
+libevent-source-install:
+  file.managed:
+    - name: /usr/local/src/libevent-2.0.22-stable.tar.gz
+    - source: salt://modules/libevent/files/libevent-2.0.22-stable.tar.gz
+    - user: root
+    - group: root
+    - mode: 644
+  cmd.run:
+    - name: cd /usr/local/src && tar zxf libevent-2.0.22-stable.tar.gz && cd libevent-2.0.22-stable &&  ./configure --prefix=/usr/local/libevent && make && make install
+    - unless: test -d /usr/local/libevent
+    - require:
+      - file: libevent-source-install
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod]# cat modules/memcached/install.sls 
+include:
+  - modules.libevent.install
+
+memcached-source-install:
+  file.managed:
+    - name: /usr/local/src/memcached-1.4.24.tar.gz
+    - source: salt://modules/memcached/files/memcached-1.4.24.tar.gz
+    - user: root
+    - group: root
+    - mode: 644
+  cmd.run:
+    - name: cd /usr/local/src && tar zxf memcached-1.4.24.tar.gz && cd memcached-1.4.24&& ./configure --prefix=/usr/local/memcached --enable-64bit --with-libevent=/usr/local/libevent && make && make install
+    - unless: test -d /usr/local/memcached
+    - require:
+      - cmd: libevent-source-install
+      - file: memcached-source-install
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod]# cat bbs/memcached.sls 
+include:
+  - modules.memcached.install
+  - modules.user.www
+
+memcached-service:
+  cmd.run:
+    - name: /usr/local/memcached/bin/memcached -d -m 128 -p 11211 -c 8096 -u www
+    - unless: netstat -ntlp | grep 11211
+    - require:
+      - cmd: memcached-source-install
+      - user: www-user-group
+------------------------------------------------------------      
+注：memcached没有配置文件，memcached只能关闭或重启，不能重载，只要重新启动就可以了，
+memcached安装时先要安装libevent软件 
+------------------------------------------------------------ 
+[root@salt-server /srv/salt/base]# cat top.sls 
+base:
+  '*':
+    - init.init
+prod:
+  'Linux-node3*':
+    - cluster.haproxy-outside
+    - cluster.haproxy-outside-keepalived
+  'Linux-node4*':
+    - cluster.haproxy-outside
+    - cluster.haproxy-outside-keepalived
+    - bbs.memcached
+------------------------------------------------------------ 
+[root@salt-server /srv/salt/base]# salt '*' state.highstate
+
+##nginx+php配置
+#salt-run命令：
+salt '*' saltutil.runnig  #查看正在运行的job_id
+salt '*' saltutil.kill_job job_id  #结束job_id的工作
+注：当你ctrl+c时，salt还在运行，所以你要用salt '*' saltutil.kill_job job_id来结束不需要的salt工作，用sal-run jobs.lookup_id 2016...  查看详细的job_id工作
+
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod]# tree
+.
+├── bbs
+│?? ├── files
+│?? │?? └── nginx-bbs.conf
+│?? ├── memcached.sls
+│?? └── web.sls
+├── cluster
+│?? ├── files
+│?? │?? ├── haproxy-outside.cfg.template
+│?? │?? └── haproxy-outside-keepalived.conf
+│?? ├── haproxy-outside-keepalived.sls
+│?? └── haproxy-outside.sls
+└── modules
+    ├── haproxy
+    │?? ├── files
+    │?? │?? ├── haproxy-1.9.0.tar.gz
+    │?? │?? └── haproxy.init
+    │?? └── install.sls
+    ├── keepalived
+    │?? ├── files
+    │?? │?? ├── keepalived-1.2.17.tar.gz
+    │?? │?? ├── keepalived.init
+    │?? │?? └── keepalived.sysconfig
+    │?? └── install.sls
+    ├── libevent
+    │?? ├── files
+    │?? │?? └── libevent-2.0.22-stable.tar.gz
+    │?? └── install.sls
+    ├── memcached
+    │?? ├── files
+    │?? │?? └── memcached-1.4.24.tar.gz
+    │?? └── install.sls
+    ├── nginx
+    │?? ├── files
+    │?? │?? ├── nginx-1.9.1.tar.gz
+    │?? │?? ├── nginx.conf
+    │?? │?? └── nginx-init
+    │?? ├── install.sls
+    │?? └── service.sls
+    ├── pcre
+    │?? ├── files
+    │?? │?? └── pcre-8.37.tar.gz
+    │?? └── install.sls
+    ├── php
+    │?? ├── files
+    │?? │?? ├── init.d.php-fpm
+    │?? │?? ├── memcache-2.2.7.tgz
+    │?? │?? ├── php-5.6.9.tar.gz
+    │?? │?? ├── php-fpm.conf.default
+    │?? │?? ├── php.ini-production
+    │?? │?? └── phpredis-2.2.7.tgz
+    │?? ├── install.sls
+    │?? ├── php-memcache.sls
+    │?? └── php-redis.sls
+    ├── pkg
+    │?? └── make.sls
+    └── user
+        └── www.sls
+
+------------------------------------------------------------
+##1.php部署
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod/modules/php]# cat install.sls 
+include:
+  - modules.pkg.make
+  - modules.user.www
+
+pkg-php:
+  pkg.installed:
+    - names:
+      - mariadb-devel
+      - swig
+      - libjpeg-turbo
+      - libjpeg-turbo-devel
+      - libpng
+      - libpng-devel
+      - freetype
+      - freetype-devel
+      - libxml2
+      - libxml2-devel
+      - zlib
+      - zlib-devel
+      - libcurl
+      - libcurl-devel
+
+php-source-install:
+  file.managed:
+    - name: /usr/local/src/php-5.6.9.tar.gz
+    - source: salt://modules/php/files/php-5.6.9.tar.gz
+    - user: root
+    - group: root
+    - mode: 755
+
+  cmd.run:
+    - name: cd /usr/local/src && tar zxf php-5.6.9.tar.gz && cd php-5.6.9&&  ./configure --prefix=/usr/local/php-fastcgi --with-pdo-mysql=mysqlnd --with-mysqli=mysqlnd --with-mysql=mysqlnd --with-jpeg-dir --with-png-dir --with-zlib --enable-xml  --with-libxml-dir --with-curl --enable-bcmath --enable-shmop --enable-sysvsem  --enable-inline-optimization --enable-mbregex --with-openssl --enable-mbstring --with-gd --enable-gd-native-ttf --with-freetype-dir=/usr/lib64 --with-gettext=/usr/lib64 --enable-sockets --with-xmlrpc --enable-zip --enable-soap --disable-debug --enable-opcache --enable-zip --with-config-file-path=/usr/local/php-fastcgi/etc --enable-fpm --with-fpm-user=www --with-fpm-group=www && make && make install
+    - require:
+      - file: php-source-install
+      - user: www-user-group
+      - pkg: make-pkg
+    - unless: test -d /usr/local/php-fastcgi
+
+pdo-plugin:
+  cmd.run:
+    - name: cd /usr/local/src/php-5.6.9/ext/pdo_mysql/ && /usr/local/php-fastcgi/bin/phpize && ./configure --with-php-config=/usr/local/php-fastcgi/bin/php-config &&  make&& make install
+    - unless: test -f /usr/local/php-fastcgi/lib/php/extensions/*/pdo_mysql.so
+    - require:
+      - cmd: php-source-install
+
+php-ini:
+  file.managed:
+    - name: /usr/local/php-fastcgi/etc/php.ini
+    - source: salt://modules/php/files/php.ini-production
+    - user: root
+    - group: root
+    - mode: 644
 
 
+php-fpm:
+  file.managed:
+    - name: /usr/local/php-fastcgi/etc/php-fpm.conf
+    - source: salt://modules/php/files/php-fpm.conf.default
+    - user: root
+    - group: root
+    - mode: 644
+
+php-fastcgi-service:
+  file.managed:
+    - name: /etc/init.d/php-fpm
+    - source: salt://modules/php/files/init.d.php-fpm
+    - user: root
+    - group: root
+    - mode: 755
+  cmd.run:
+    - name: chkconfig --add php-fpm
+    - unless: chkconfig --list | grep php-fpm
+    - require:
+      - file: php-fastcgi-service
+  service.running:
+    - name: php-fpm
+    - enable: True
+    - require:
+      - cmd: php-fastcgi-service
+    - watch:
+      - file: php-ini
+      - file: php-fpm
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod/modules/php]# cat php-memcache.sls 
+memcache-plugin:
+  file.managed:
+    - name: /usr/local/src/memcache-2.2.7.tgz
+    - source: salt://modules/php/files/memcache-2.2.7.tgz
+    - user: root
+    - group: root
+    - mode: 755
+
+  cmd.run:
+    - name: cd /usr/local/src && tar zxf memcache-2.2.7.tgz && cd memcache-2.2.7&& /usr/local/php-fastcgi/bin/phpize && ./configure --enable-memcache --with-php-config=/usr/local/php-fastcgi/bin/php-config &&  make&& make install
+    - unless: test -f /usr/local/php-fastcgi/lib/php/extensions/*/memcache.so
+  require:
+    - file: memcache-plugin
+    - cmd: php-install
+
+memcache-php-config:
+  file.append:
+    - name: /usr/local/php-fastcgi/etc/php.ini
+    - text:
+      - extension=memcache.so
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod/modules/php]# cat php-redis.sls 
+redis-plugin:
+  file.managed:
+    - name: /usr/local/src/phpredis-2.2.7.tgz
+    - source: salt://modules/php/files/phpredis-2.2.7.tgz
+    - user: root
+    - group: root
+    - mode: 755
+  cmd.run:
+    - name: cd /usr/local/src && tar zxf phpredis-2.2.7.tgz && mv redis-2.2.7 phpredis-2.2.7 && cd phpredis-2.2.7&& /usr/local/php-fastcgi/bin/phpize && ./configure --with-php-config=/usr/local/php-fastcgi/bin/php-config &&  make&& make install
+    - unless: test -f /usr/local/php-fastcgi/lib/php/extensions/*/redis.so
+  require:
+    - file: redis-plugin
+    - cmd: php-install
+
+redis-php-config:
+  file.append:
+    - name: /usr/local/php-fastcgi/etc/php.ini
+    - text:
+      - extension=redis.so
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod/modules/php/files]# cat init.d.php-fpm 
+#! /bin/sh
+
+### BEGIN INIT INFO
+# Provides:          php-fpm
+# Required-Start:    $remote_fs $network
+# Required-Stop:     $remote_fs $network
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: starts php-fpm
+# Description:       starts the PHP FastCGI Process Manager daemon
+### END INIT INFO
+
+prefix=/usr/local/php-fastcgi
+exec_prefix=${prefix}
+
+php_fpm_BIN=${exec_prefix}/sbin/php-fpm
+php_fpm_CONF=${prefix}/etc/php-fpm.conf
+php_fpm_PID=${prefix}/var/run/php-fpm.pid
+
+
+php_opts="--fpm-config $php_fpm_CONF --pid $php_fpm_PID"
+
+
+wait_for_pid () {
+        try=0
+
+        while test $try -lt 35 ; do
+
+                case "$1" in
+                        'created')
+                        if [ -f "$2" ] ; then
+                                try=''
+                                break
+                        fi
+                        ;;
+
+                        'removed')
+                        if [ ! -f "$2" ] ; then
+                                try=''
+                                break
+                        fi
+                        ;;
+                esac
+
+                echo -n .
+                try=`expr $try + 1`
+                sleep 1
+
+        done
+
+}
+
+case "$1" in
+        start)
+                echo -n "Starting php-fpm "
+
+                $php_fpm_BIN --daemonize $php_opts
+
+                if [ "$?" != 0 ] ; then
+                        echo " failed"
+                        exit 1
+                fi
+
+                wait_for_pid created $php_fpm_PID
+
+                if [ -n "$try" ] ; then
+                        echo " failed"
+                        exit 1
+                else
+                        echo " done"
+                fi
+        ;;
+
+        stop)
+                echo -n "Gracefully shutting down php-fpm "
+
+                if [ ! -r $php_fpm_PID ] ; then
+                        echo "warning, no pid file found - php-fpm is not running ?"
+                        exit 1
+                fi
+
+                kill -QUIT `cat $php_fpm_PID`
+
+                wait_for_pid removed $php_fpm_PID
+
+                if [ -n "$try" ] ; then
+                        echo " failed. Use force-quit"
+                        exit 1
+                else
+                        echo " done"
+                fi
+        ;;
+
+        status)
+                if [ ! -r $php_fpm_PID ] ; then
+                        echo "php-fpm is stopped"
+                        exit 0
+                fi
+
+                PID=`cat $php_fpm_PID`
+                if ps -p $PID | grep -q $PID; then
+                        echo "php-fpm (pid $PID) is running..."
+                else
+                        echo "php-fpm dead but pid file exists"
+                fi
+        ;;
+
+        force-quit)
+                echo -n "Terminating php-fpm "
+
+                if [ ! -r $php_fpm_PID ] ; then
+                        echo "warning, no pid file found - php-fpm is not running ?"
+                        exit 1
+                fi
+
+                kill -TERM `cat $php_fpm_PID`
+
+                wait_for_pid removed $php_fpm_PID
+
+                if [ -n "$try" ] ; then
+                        echo " failed"
+                        exit 1
+                else
+                        echo " done"
+                fi
+        ;;
+
+        restart)
+                $0 stop
+                $0 start
+        ;;
+
+        reload)
+
+                echo -n "Reload service php-fpm "
+
+                if [ ! -r $php_fpm_PID ] ; then
+                        echo "warning, no pid file found - php-fpm is not running ?"
+                        exit 1
+                fi
+
+                kill -USR2 `cat $php_fpm_PID`
+
+                echo " done"
+        ;;
+
+        *)
+                echo "Usage: $0 {start|stop|force-quit|restart|reload|status}"
+                exit 1
+        ;;
+
+esac
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod/modules/php/files]# grep -v '^;' php-fpm.conf.default 
+[global]
+error_log = /tmp/php-fpm.log
+[www]
+user = www
+group = www
+listen = /usr/local/php-fastcgi/php-fpm.sock
+listen.owner = www
+listen.group = www
+listen.mode = 0660
+pm = dynamic
+pm.max_children = 50
+pm.start_servers = 20
+pm.min_spare_servers = 10
+pm.max_spare_servers = 30
+pm.max_requests = 50000
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod/modules/php/files]# grep ^[a-Z1-9] php.ini-production 
+engine = On
+short_open_tag = Off
+asp_tags = Off
+precision = 14
+output_buffering = 4096
+zlib.output_compression = Off
+implicit_flush = Off
+unserialize_callback_func =
+serialize_precision = 17
+disable_functions =
+disable_classes =
+zend.enable_gc = On
+expose_php = On
+max_execution_time = 30
+max_input_time = 60
+memory_limit = 128M
+error_reporting = E_ALL & ~E_NOTICE
+display_errors = Off
+display_startup_errors = Off
+log_errors = On
+log_errors_max_len = 1024
+ignore_repeated_errors = Off
+ignore_repeated_source = Off
+report_memleaks = On
+track_errors = Off
+html_errors = On
+error_log = /tmp/php_errors.log
+variables_order = "GPCS"
+request_order = "GP"
+register_argc_argv = Off
+auto_globals_jit = On
+post_max_size = 8M
+auto_prepend_file =
+auto_append_file =
+default_mimetype = "text/html"
+doc_root =
+user_dir =
+enable_dl = Off
+file_uploads = On
+upload_max_filesize = 2M
+max_file_uploads = 20
+allow_url_fopen = On
+allow_url_include = Off
+default_socket_timeout = 60
+cli_server.color = On
+date.timezone = PRC
+pdo_mysql.cache_size = 2000
+pdo_mysql.default_socket=
+SMTP = localhost
+smtp_port = 25
+mail.add_x_header = On
+sql.safe_mode = Off
+odbc.allow_persistent = On
+odbc.check_persistent = On
+odbc.max_persistent = -1
+odbc.max_links = -1
+odbc.defaultlrl = 4096
+odbc.defaultbinmode = 1
+ibase.allow_persistent = 1
+ibase.max_persistent = -1
+ibase.max_links = -1
+ibase.timestampformat = "%Y-%m-%d %H:%M:%S"
+ibase.dateformat = "%Y-%m-%d"
+ibase.timeformat = "%H:%M:%S"
+mysql.allow_local_infile = On
+mysql.allow_persistent = On
+mysql.cache_size = 2000
+mysql.max_persistent = -1
+mysql.max_links = -1
+mysql.default_port =
+mysql.default_socket =
+mysql.default_host =
+mysql.default_user =
+mysql.default_password =
+mysql.connect_timeout = 60
+mysql.trace_mode = Off
+mysqli.max_persistent = -1
+mysqli.allow_persistent = On
+mysqli.max_links = -1
+mysqli.cache_size = 2000
+mysqli.default_port = 3306
+mysqli.default_socket =
+mysqli.default_host =
+mysqli.default_user =
+mysqli.default_pw =
+mysqli.reconnect = Off
+mysqlnd.collect_statistics = On
+mysqlnd.collect_memory_statistics = Off
+pgsql.allow_persistent = On
+pgsql.auto_reset_persistent = Off
+pgsql.max_persistent = -1
+pgsql.max_links = -1
+pgsql.ignore_notice = 0
+pgsql.log_notice = 0
+sybct.allow_persistent = On
+sybct.max_persistent = -1
+sybct.max_links = -1
+sybct.min_server_severity = 10
+sybct.min_client_severity = 10
+bcmath.scale = 0
+session.save_handler = files
+session.use_strict_mode = 0
+session.use_cookies = 1
+session.use_only_cookies = 1
+session.name = PHPSESSID
+session.auto_start = 0
+session.cookie_lifetime = 0
+session.cookie_path = /
+session.cookie_domain =
+session.cookie_httponly =
+session.serialize_handler = php
+session.gc_probability = 1
+session.gc_divisor = 1000
+session.gc_maxlifetime = 1440
+session.referer_check =
+session.cache_limiter = nocache
+session.cache_expire = 180
+session.use_trans_sid = 0
+session.hash_function = 0
+session.hash_bits_per_character = 5
+url_rewriter.tags = "a=href,area=href,frame=src,input=src,form=fakeentry"
+mssql.allow_persistent = On
+mssql.max_persistent = -1
+mssql.max_links = -1
+mssql.min_error_severity = 10
+mssql.min_message_severity = 10
+mssql.compatibility_mode = Off
+mssql.secure_connection = Off
+tidy.clean_output = Off
+soap.wsdl_cache_enabled=1
+soap.wsdl_cache_dir="/tmp"
+soap.wsdl_cache_ttl=86400
+soap.wsdl_cache_limit = 5
+ldap.max_links = -1
+opcache.enable=1
+extension=pdo_mysql.so
+
+------------------------------------------------------------
+#nginx部署
+------------------------------------------------------------
+--nginx组件pcre
+[root@salt-server /srv/salt/prod/modules/pcre]# cat install.sls 
+pcre-source-install:
+  file.managed:
+    - name: /usr/local/src/pcre-8.37.tar.gz
+    - source: salt://modules/pcre/files/pcre-8.37.tar.gz
+    - user: root
+    - group: root
+    - mode: 755
+  cmd.run:
+    - name: cd /usr/local/src && tar zxf pcre-8.37.tar.gz && cd pcre-8.37 && ./configure --prefix=/usr/local/pcre && make && make install
+    - unless: test -d /usr/local/pcre
+    - require:
+      - file: pcre-source-install
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod/modules/nginx]# cat install.sls 
+include:
+  - modules.user.www
+  - modules.pcre.install  #安装pcre，后面有程序会用到这个包
+nginx-source-install:
+  file.managed:
+    - name: /usr/local/src/nginx-1.9.1.tar.gz
+    - source: salt://modules/nginx/files/nginx-1.9.1.tar.gz
+    - user: root
+    - group: root
+    - mode: 755
+  cmd.run:
+    - name: cd /usr/local/src && tar zxf nginx-1.9.1.tar.gz && cd nginx-1.9.1&& ./configure --prefix=/usr/local/nginx --user=www --group=www --with-http_ssl_module --with-http_stub_status_module --with-file-aio --with-http_dav_module --with-pcre=/usr/local/src/pcre-8.37 && make && make install && chown -R www:www /usr/local/nginx
+    - unless: test -d /usr/local/nginx
+    - require:
+      - user: www-user-group
+      - file: nginx-source-install
+      - cmd: pcre-source-install 
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod/modules/nginx]# cat service.sls 
+include:
+  - modules.nginx.install
+
+nginx-init:
+  file.managed:
+    - name: /etc/init.d/nginx
+    - source: salt://modules/nginx/files/nginx-init
+    - mode: 755
+    - user: root
+    - group: root
+  cmd.run:
+    - name: chkconfig --add nginx
+    - unless: chkconfig --list | grep nginx
+    - require:
+      - file: nginx-init
+
+/usr/local/nginx/conf/nginx.conf:
+  file.managed:
+    - source: salt://modules/nginx/files/nginx.conf
+    - user: www
+    - group: www
+    - mode: 644 
+
+nginx-service:
+  service.running:
+    - name: nginx
+    - enable: True
+    - reload: True
+    - require:
+      - cmd: nginx-init
+    - watch:
+      - file: /usr/local/nginx/conf/nginx.conf
+      - file: nginx-online
+
+nginx-online:
+  file.directory:
+    - name: /usr/local/nginx/conf/vhost_online
+
+nginx-offline:
+  file.directory:
+    - name: /usr/local/nginx/conf/vhost_offline
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod/modules/nginx]# cat files/nginx.conf 
+user  www;
+worker_processes  16;
+error_log  logs/error.log  error;
+worker_rlimit_nofile 30000;
+pid        logs/nginx.pid;
+events {
+    use epoll;
+    worker_connections  65535;
+}
+
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+    sendfile    on;
+    tcp_nopush  on;
+    underscores_in_headers on;
+    keepalive_timeout  10;
+       send_timeout 60;
+include /usr/local/nginx/conf/vhost_online/*.conf;
+server {
+                listen         8080;
+                server_name 127.0.0.1;
+        location /nginx_status {
+                stub_status on;
+                access_log off;
+                allow 127.0.0.1;
+                deny all;
+                }
+        }
+}
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod/modules/nginx]# cat files/nginx-init 
+#!/bin/sh
+#
+# nginx - this script starts and stops the nginx daemon
+#
+# chkconfig:   - 85 15 
+# description:  Nginx is an HTTP(S) server, HTTP(S) reverse \
+#               proxy and IMAP/POP3 proxy server
+# processname: nginx
+# config:      /usr/local/nginx/conf/nginx.conf  //这里虽说是#号开头，但是nginx还会去这个路径找配置文件
+# pidfile:     /usr/local/nginx/logs/nginx.pid   //这里虽说是#号开头，但是nginx还会去这个路径找pid
+ 
+# Source function library.
+. /etc/rc.d/init.d/functions
+ 
+# Source networking configuration.
+. /etc/sysconfig/network
+ 
+# Check that networking is up.
+[ "$NETWORKING" = "no" ] && exit 0
+ 
+nginx="/usr/local/nginx/sbin/nginx"
+prog=$(basename $nginx)
+ 
+NGINX_CONF_FILE="/usr/local/nginx/conf/nginx.conf"
+ 
+[ -f /etc/sysconfig/nginx ] && . /etc/sysconfig/nginx
+ 
+lockfile=/var/lock/subsys/nginx
+ 
+make_dirs() {
+   # make required directories
+   user=`$nginx -V 2>&1 | grep "configure arguments:" | sed 's/[^*]*--user=\([^ ]*\).*/\1/g' -`
+   if [ -z "`grep $user /etc/passwd`" ]; then
+       useradd -M -s /bin/nologin $user
+   fi
+   options=`$nginx -V 2>&1 | grep 'configure arguments:'`
+   for opt in $options; do
+       if [ `echo $opt | grep '.*-temp-path'` ]; then
+           value=`echo $opt | cut -d "=" -f 2`
+           if [ ! -d "$value" ]; then
+               # echo "creating" $value
+               mkdir -p $value && chown -R $user $value
+           fi
+       fi
+   done
+}
+ 
+start() {
+    [ -x $nginx ] || exit 5
+    [ -f $NGINX_CONF_FILE ] || exit 6
+    make_dirs
+    echo -n $"Starting $prog: "
+    daemon $nginx -c $NGINX_CONF_FILE
+    retval=$?
+    echo
+    [ $retval -eq 0 ] && touch $lockfile
+    return $retval
+}
+ 
+stop() {
+    echo -n $"Stopping $prog: "
+    killproc $prog -QUIT
+    retval=$?
+    echo
+    [ $retval -eq 0 ] && rm -f $lockfile
+    return $retval
+}
+ 
+restart() {
+    configtest || return $?
+    stop
+    sleep 1
+    start
+}
+ 
+reload() {
+    configtest || return $?
+    echo -n $"Reloading $prog: "
+    $nginx -s reload
+    RETVAL=$?
+    echo
+}
+ 
+force_reload() {
+    restart
+}
+ 
+configtest() {
+  $nginx -t -c $NGINX_CONF_FILE
+}
+ 
+rh_status() {
+    status $prog
+}
+ 
+rh_status_q() {
+    rh_status >/dev/null 2>&1
+}
+ 
+case "$1" in
+    start)
+        rh_status_q && exit 0
+        $1
+        ;;
+    stop)
+        rh_status_q || exit 0
+        $1
+        ;;
+    restart|configtest)
+        $1
+        ;;
+    reload)
+        rh_status_q || exit 7
+        $1
+        ;;
+    force-reload)
+        force_reload
+        ;;
+    status)
+        rh_status
+        ;;
+    condrestart|try-restart)
+        rh_status_q || exit 0
+            ;;
+    *)
+        echo $"Usage: $0 {start|stop|status|restart|condrestart|try-restart|reload|force-reload|configtest}"
+        exit 2
+esac
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod/bbs]# cat files/nginx-bbs.conf 
+server {
+        listen         8080;
+        root /usr/local/nginx/html;
+        index index.htm index.html index.php;
+        location ~ \.php$
+            {
+              fastcgi_pass unix:/usr/local/php-fastcgi/php-fpm.sock;
+              fastcgi_index index.php;
+              include fastcgi.conf;
+        } 
+}
+------------------------------------------------------------
+[root@salt-server /srv/salt/prod/bbs]# cat web.sls 
+include:
+  - modules.php.install
+  - modules.php.php-memcache
+  - modules.php.php-redis
+  - modules.nginx.service
+
+web-bbs:
+  file.managed:
+    - name: /usr/local/nginx/conf/vhost_online/bbs.conf
+    - source: salt://bbs/files/nginx-bbs.conf
+    - user: root
+    - group: root
+    - mode: 644
+    - require:
+      - service: php-fastcgi-service
+    - watch_in:
+      - service: nginx-service
+------------------------------------------------------------
+--top file文件
+[root@salt-server /srv/salt/base]# cat top.sls 
+base:
+  '*':
+    - init.init
+prod:
+  'Linux-node3*':
+    - cluster.haproxy-outside
+    - cluster.haproxy-outside-keepalived
+    - bbs.memcached
+    - bbs.web
+
+  'Linux-node4*':
+    - cluster.haproxy-outside
+    - cluster.haproxy-outside-keepalived
+    - bbs.memcached
+    - bbs.web
+------------------------------------------------------------
 
 
 
