modify 5.Saltstack.md for 201901111748

--- a/5.Saltstack.md
+++ b/5.Saltstack.md
@@ -2196,8 +2196,12 @@ return:
   tag: salt/wheel/20190108150750623661
 
 
-
-
+资料：
+www.github.com/binbin91/oms
+oms系统:
+git clone --depth 1 https://www.github.com/binbin91/oms
+saltshaker系统:
+https://github.com/yueyongyue/saltshaker
 
 
 
