modify 1.Cobbler.md for 201901122014

--- a/1.Cobbler.md
+++ b/1.Cobbler.md
@@ -1,4 +1,4 @@
-#操作系统安装流程及系统初始化规范
+﻿#操作系统安装流程及系统初始化规范
 >  v1.0   write of Jack
 
 
@@ -195,11 +195,14 @@ ITIL v3将ITIL理论分成了五部分
 #####配置源和安装必备软件：
 rpm –ivh https://mirrors.aliyun.com/epel/epel-release-latest-7.noarch.rpm
 yum install httpd dhcp tftp cobbler cobbler-web pykickstart xinetd –y
-#####安装步骤：
+#####安装步骤：注：cobbler安装centos7内存最低要求为2G
 1.	systemctl start httpd
 2.	systemctl start cobbler
 3.	关闭selinux
 4.	第一步执行cobbler 	check检查
+1 : debmirror package is not installed, it will be required to manage debian deployments and repositories
+2 : fencing tools were not found, and are required to use the (optional) power management features. install cman or fence-agents to use them
+这上面两项可以忽略不用设置
 5.	vim /etc/cobbler/settings 
 next_server 192.168.1.237(为TFTP主机)
 server: 192.168.1.237(为cobbler主机)
@@ -207,8 +210,8 @@ manage_dhcp: 1   （设置为可用cobbler dhcp模板文件管理设置dhcp）
 6.	将/etc/xinetd.d/tftp中的disable设为no
 7.	cobbler get-loaders  运行获取cobbler所需的文件
 8.	重启cobbler的服务
-9.	openssl passwd -1 -salt 'cobler' 'cobler' 生成加密密码，并在/etc/cobbler/settings将default_password_crypted 值设为刚才生成的加密密码，此密码为自动化部署成功后root密码
-10.	vim /etc/cobbler/dhcp.template ，设置如下：
+9.	openssl passwd -1 -salt 'cobbler' 'cobbler888' 生成加密密码，并在/etc/cobbler/settings将default_password_crypted 值设为刚才生成的加密密码，此密码为自动化部署成功后root密码,'cobbler888'为设置后的密码，'cobbler'为描述信息
+10.	vim /etc/cobbler/dhcp.template ，替换设置如下：
 subnet 192.168.1.0 netmask 255.255.255.0 {
      option routers             192.168.1.254;
      option domain-name-servers 114.114.114.114;
@@ -216,9 +219,11 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
      range dynamic-bootp        192.168.1.100 192.168.1.254;
 11. systemctl restart cobblerd
 12. cobbler sync（同步cobbler的配置，自动生成dhcp的配置文件并自动重启）
+先挂载Centos7.5镜像，然后导入Centos7.5镜像才行：
 13. cobbler import --path=/mount/ --name=CentOS-7-x86_64 --arch=x86_64
 (【导入系统镜像的路径，镜像名字为CentOS-7-X86_64，系统位数为x86_64】
 导入后的镜像路径在/var/www/cobbler/ks_mirror/下,/mount/路径是已经挂载的系统镜像)
+删除不需要的镜像：cobbler profile remove --name=CentOS-7-X86_64 --recursive
 14. cobbler profile  可查看镜像的命令
 Cobbler profile report  查看详细的参数信息
 导入kickstart文件：cobbler profile edit --name= CentOS-7-x86_64 --kickstart=/var/lib/cobbler/kickstarts/CentOS-7-x86_64.cfg   (作用是指定CentOS7系统镜像的kickstart文件配置，事先要导入到这个默认位置)
