--- a/6.Glusterfs.md
+++ b/6.Glusterfs.md
@@ -1,4 +1,4 @@
-﻿#分布式文件系统glusterFS
+#分布式文件系统glusterFS
 <pre>
 ###windows远程桌面无法复制粘添：在目标主机上杀死rdpclip进程并重新运行rdpclip.exe即可
 
@@ -89,7 +89,7 @@ State: Peer in Cluster (Connected)
 Hostname: clusterFS-node4-salt.jack.com
 Uuid: 0b4e5407-ec4e-40e9-b41c-fbb46086bc12
 State: Peer in Cluster (Connected)
-  5. cent0s6安装xfs文件系统，对添加的硬盘进行xfs格式化:yum install -u xfsprogs,centos7系统自带可不用安装(因为ext4文件系统最大支持16TB，而xfs文件系统支持PB级。)
+  5. centos6安装xfs文件系统，对添加的硬盘进行xfs格式化:yum install -u xfsprogs,centos7系统自带可不用安装(因为ext4文件系统最大支持16TB，而xfs文件系统支持PB级。)
   6. 官网文档对新硬盘要进行分一个区，实际操作不进行分区也没什么问题。系统盘要做RAID,gluster数据盘不用做RAID
   7. 使用xfs格式化硬盘：[root@salt-server ~]# salt clusterFS-node* cmd.run 'mkfs.xfs /dev/sdb'
   8. [root@salt-server ~]# salt clusterFS-node* cmd.run 'mkdir -p /storage/brick1 && mount /dev/sdb /storage/brick1'
@@ -148,7 +148,7 @@ tmpfs           920M     0  920M   0% /sys/fs/cgroup
 tmpfs           184M     0  184M   0% /run/user/0
 127.0.0.1:/gv1   20G  270M   20G   2% /mnt
   18. [root@clusterFS-node1-salt ~]# mount -t glusterfs 127.0.0.1:/gv1 /mnt
-  19. 任意一台gluster服务器挂载卷后都可能卷进行文件拷坝，而且每台gluster服务器都会进行同步数据
+  19. 任意一台gluster服务器挂载卷后都可能进行文件拷坝，而且每台gluster服务器都会进行同步数据
   20. 用nfs方式挂载gluster卷（centos7不支持）：mount -t nfs -o mountproto=tcp 192.168.1.37:/gv1 /mnt
   21. 创建复制卷：
 [root@clusterFS-node1-salt ~]# gluster volume create gv2 replica 2 clusterFS-node3-salt.jack.com:/storage/brick1 clusterFS-node4-salt.jack.com:/storage/brick1 force #replica为复制卷，后面的2为复制两个，如果复制3个则后面为3
@@ -390,6 +390,65 @@ total 36M
 -rw-r--r-- 1 root root    0 Jan 13 22:17 cc
 -rw-r-xr-- 1 root root 6.6M Jan 13 22:29 image123.JPG
 -rw-r--r-- 1 root root    3 Jan 13 22:11 tt
+
+
+#构建企业级分布式存储
+1.硬件选型
+一般2U的机型，SATA磁盘4G，I/O要求高可选SSD，为了充分保证系统稳定性和性能，要求所有gluster服务器配置尽量一致，尤其是硬盘数量和大小。机器的RAID卡需要带电池，缓存越大，性能越好，一般情况下做RAID10，出于空间考虑RAID5也可以，但是热备盘要1-2块。
+2.系统要求及分区划分
+系统要求centos6.x，安装完成后升级到最新版本，安装的时候不要使用lvm,建议/boot分区大小200M,/分区100G，swap分区和内存大小一样，剩余空间给gluster使用，划分单独的硬盘空间，除了基本的管理软件和开发工具，其他一律不要安装。
+3.网络环境
+网络要求全部千兆，条件好的话可以配置万兆网络，服务器配置万兆，服务器最少两张网卡，一块给gluster使用，一块给管理使用。
+4.服务器摆放分布
+服务器主备机器放在不同的机柜，连接不同的交换机。
+5.构建高性能、高可用存储
+一般企业中，采用分布式复制卷，因为有数据备份，数据相对安全。分布式条带卷目前对gluster来说没有完全成熟，存在一定的风险。
+6.开启防火墙端口
+一般在企业中linux防火墙是打开的，24007:24011和49152:49162（不做raid的10块硬盘数据通道数）这些端口要放行，这样才能开通gluster服务器之间的访问。/etc/glusterfs/glusterd.vol文件能改变端口49152的端口值，因为当与kvm一起时，kvm也有这个端口，此时需要改变这个端口值。
+ 
+###glusterfs文件系统优化
+参数			说明			缺省值			合法值
+Auth.allow	ip访问权	 	*(allow all)	ip地址
+Cluster.min-free-disk	剩余磁盘空间阈值	10%		百分比
+Cluster.stripe-block-size	条带大小		128KB		字节
+Network.frame-timeout		请求等待时间		1800s		0-1800
+Network.ping-timeout		客户端等待时间		42s		0-42
+Nfs.disabled	关闭NFS服务	off		off|on
+Performance.io-thread-count		IO线程数		16		0-65
+Performance.cache-refresh-timeout	缓存检验周期		1s	0-61
+Performance.cache-size	读缓存大小	32MB	字节
+
+Performance.quick-read:优化读取小文件的性能。
+Performance.read-ahead:用预读的方式提高读取的性能，有利于应用频繁持续性的访问文件，当应用完成当前数据块读取的时候，下一个数据块就已经准备好了。
+Performance.write-behind:在写数据时，先写入缓存内，在写入硬盘，以提高写入的性能。
+Performance.io-cache:缓存已经被读过的。
+调整方法：
+例如：
+gluster volume set gv1 Performance.io-thread-count 20
+
+##监控及日常维护
+使用zabbix自带模板即可。监控CPU，内存，主机存活，磁盘空间，主机运行时间，系统load等。日常情况要查看服务器的监控值，遇到报警要及时处理。（例如：df -h命令截取到挂载的gluster目录，使用脚本对这个目录进行写，如果不能写zabbix则触发动作）
+查看主机状态：gluster peer status
+在分布式复制卷下执行的：
+查看卷状态：gluster volume status gv2
+启动完全修复：gluster volume heal gv2 full(当分布式文件系统上网线断了一个小时时启动完全修复)
+查看需要修复的文件：gluster volume heal gv2 full
+查看修复成功的文件：gluster volume heal gv2 info healed
+查看修复失败的文件：gluster volume heal gv2 info heal-failed
+查看脑裂的文件：gluster volume heal gv2 info split-brain
+如何修复脑裂？：人为判断哪一个文件为标准，手动删除另外的错误文件，gluster以标准文件来同步其他文件
+激活quota功能：gluster volume quota gv2 enable
+关闭quota功能：gluster volume quota gv2 disable
+限制gv2卷下目录data的大小为30MB:mkdir /gv2/date && gluster volume quota gv2 limit-usage /data 30MB
+查看quota信息列表状态：gluster volume quota gv2 list
+删除/data目录的限制：gluster volume quota gv2 remove /data
+注意：quota是对卷下的目录进行限制，不是对整个卷进行限制
+
+
+
+
+
+
 
 
 
