modify 6.Glusterfs.md for 201901182301

--- a/6.Glusterfs.md
+++ b/6.Glusterfs.md
@@ -432,7 +432,7 @@ gluster volume set gv1 Performance.io-thread-count 20
 在分布式复制卷下执行的：
 查看卷状态：gluster volume status gv2
 启动完全修复：gluster volume heal gv2 full(当分布式文件系统上网线断了一个小时时启动完全修复)
-查看需要修复的文件：gluster volume heal gv2 full
+查看需要修复的文件：gluster volume heal gv2 info
 查看修复成功的文件：gluster volume heal gv2 info healed
 查看修复失败的文件：gluster volume heal gv2 info heal-failed
 查看脑裂的文件：gluster volume heal gv2 info split-brain
@@ -444,14 +444,28 @@ gluster volume set gv1 Performance.io-thread-count 20
 删除/data目录的限制：gluster volume quota gv2 remove /data
 注意：quota是对卷下的目录进行限制，不是对整个卷进行限制
 
+##硬盘故障
+两张情况：
+第一种：底层做了RAID的机器一块硬盘损坏，如何恢复？
+直接用RAID的特性对硬盘进行跟换即可。
 
+第二种：当gluster storage1和storage2两台服务器中复制卷storage2服务器/storage/brick2硬盘坏掉时，此时还不会丢失文件，因为storage1服务器/storage/brick2硬盘是好的，怎么恢复处理？
+1. 先移除storage2坏的那块硬盘，然后添加同规格的硬盘，进行xfs文件格式化、挂载。
+2. 在storage1服务器使用命令：getfattr -d -m '.*' /storage/brick2 获取隐藏的gluster配置文件详细信息（trusted.glusterfs.volume-id -v 0slEaIKclQQ0GpwUXSYvtHqw== /storage/brick2）
+3. 在storage2服务器/storage/brick2目录上（复制卷的挂载目录）执行：setfattr -n trusted.glusterfs.volume-id -v 0slEaIKclQQ0GpwUXSYvtHqw== /storage/brick2 使新硬盘恢复隐藏的gluster配置文件，
+4. 在使用命令：getfattr -d -m '.*' /storage/brick2 可查看恢复的信息
+5. 重试上面的步骤，把gluster想关的隐藏文件一一恢复，不管gluster文件的顺序，quota限额这项可不用复制，重启gluster服务就会自动同步
 
+##一台主机故障
+系统挂了，需要重新安装系统和gluster的软件，建议保存gluster的安装软件，以包以后可以同版本安装
+a) 物理故障
+b) 磁盘阵列多块硬盘丢失，使数据丢失
+c) 系统坏了
 
-
-
-
-
-
+解决办法：
+准备一台服务器跟坏的服务器配置一样，至少硬盘大小和数量一样，然后安装系统和gluster软件。再在其他健康的节点上使用命令gluster peer status查看所有的节点UUID，包括坏的那台服务器节点UUID，可以在新安装的这台服务器上修改文件:/var/lib/glusterd/glusterd.info的UUID成之前坏的那台UUID，然后格式化和挂载硬盘，然后执行:gluster volume heal gv2 full启动自动同步修复。
+！！注意：如果硬盘没坏，只是系统还的话，就在修改为UUID，格式化和挂载硬盘后直接添加之前的硬盘，因为硬盘下有gluster的隐藏配置文件，直接添加即可。
+！！卸载gluster软件时要把cluster相关的软件一并删除掉
 
 
 
