--- a/6.Glusterfs.md
+++ b/6.Glusterfs.md
@@ -1,4 +1,4 @@
-#分布式文件系统glusterFS
+﻿#分布式文件系统glusterFS
 <pre>
 ###windows远程桌面无法复制粘添：在目标主机上杀死rdpclip进程并重新运行rdpclip.exe即可
 
@@ -376,7 +376,7 @@ volume start: gv2: success
 
 删除卷：
 [root@clusterFS-node1-salt /]# gluster volume delete gv1
-！！注意：gv1是分布式复制卷，第一次新建gluster1,gluster2为复制卷，然后加入了gluster3,gluster4复制卷进去，所以以后要想恢复数据必需要先新建gluster1,gluster2为复制卷，然后加入了gluster3,gluster4复制卷进去，顺序不能变，否则会失败。注意在每个/storage/brick1目录下都有gluster的配置文件，不要删除和更忙，应该变个是关系到你能是否恢复数据的关键，对于分布式条带卷来说更至关重要。
+！！注意：gv1是分布式复制卷，第一次新建gluster1,gluster2为复制卷，然后加入了gluster3,gluster4复制卷进去，所以以后要想恢复数据必需要先新建gluster1,gluster2为复制卷，然后加入了gluster3,gluster4复制卷进去，顺序不能变，否则会失败。注意在每个/storage/brick1目录下都有gluster的配置文件，不要删除和更改，应该变个是关系到你能是否恢复数据的关键，对于分布式条带卷来说更至关重要。
 
 添加卷并恢复数据：
 1. [root@clusterFS-node1-salt /]# gluster volume create gv1 replica 2 clusterFS-node1-salt.jack.com:/storage/brick1 clusterFS-node2-salt.jack.com:/storage/brick1 force
@@ -394,7 +394,7 @@ total 36M
 
 #构建企业级分布式存储
 1.硬件选型
-一般2U的机型，SATA磁盘4G，I/O要求高可选SSD，为了充分保证系统稳定性和性能，要求所有gluster服务器配置尽量一致，尤其是硬盘数量和大小。机器的RAID卡需要带电池，缓存越大，性能越好，一般情况下做RAID10，出于空间考虑RAID5也可以，但是热备盘要1-2块。
+一般2U的机型，SATA磁盘4T，I/O要求高可选SSD，为了充分保证系统稳定性和性能，要求所有gluster服务器配置尽量一致，尤其是硬盘数量和大小。机器的RAID卡需要带电池，缓存越大，性能越好，一般情况下做RAID10，出于空间考虑RAID5也可以，但是热备盘要1-2块。
 2.系统要求及分区划分
 系统要求centos6.x，安装完成后升级到最新版本，安装的时候不要使用lvm,建议/boot分区大小200M,/分区100G，swap分区和内存大小一样，剩余空间给gluster使用，划分单独的硬盘空间，除了基本的管理软件和开发工具，其他一律不要安装。
 3.网络环境
@@ -451,7 +451,7 @@ gluster volume set gv1 Performance.io-thread-count 20
 
 第二种：当gluster storage1和storage2两台服务器中复制卷storage2服务器/storage/brick2硬盘坏掉时，此时还不会丢失文件，因为storage1服务器/storage/brick2硬盘是好的，怎么恢复处理？
 1. 先移除storage2坏的那块硬盘，然后添加同规格的硬盘，进行xfs文件格式化、挂载。
-2. 在storage1服务器使用命令：getfattr -d -m '.*' /storage/brick2 获取隐藏的gluster配置文件详细信息（trusted.glusterfs.volume-id -v 0slEaIKclQQ0GpwUXSYvtHqw== /storage/brick2）
+2. 在storage1服务器使用命令：getfattr -d -m '.*' /storage/brick2 获取隐藏的gluster配置文件详细信息（-n trusted.glusterfs.volume-id -v 0slEaIKclQQ0GpwUXSYvtHqw== /storage/brick2）
 3. 在storage2服务器/storage/brick2目录上（复制卷的挂载目录）执行：setfattr -n trusted.glusterfs.volume-id -v 0slEaIKclQQ0GpwUXSYvtHqw== /storage/brick2 使新硬盘恢复隐藏的gluster配置文件，
 4. 在使用命令：getfattr -d -m '.*' /storage/brick2 可查看恢复的信息
 5. 重试上面的步骤，把gluster想关的隐藏文件一一恢复，不管gluster文件的顺序，quota限额这项可不用复制，重启gluster服务就会自动同步
@@ -464,7 +464,8 @@ c) 系统坏了
 
 解决办法：
 准备一台服务器跟坏的服务器配置一样，至少硬盘大小和数量一样，然后安装系统和gluster软件。再在其他健康的节点上使用命令gluster peer status查看所有的节点UUID，包括坏的那台服务器节点UUID，可以在新安装的这台服务器上修改文件:/var/lib/glusterd/glusterd.info的UUID成之前坏的那台UUID，然后格式化和挂载硬盘，然后执行:gluster volume heal gv2 full启动自动同步修复。
-！！注意：如果硬盘没坏，只是系统还的话，就在修改为UUID，格式化和挂载硬盘后直接添加之前的硬盘，因为硬盘下有gluster的隐藏配置文件，直接添加即可。
+！！注意：如果硬盘没坏，只是系统坏的话，就在修改为UUID，底层格式化和挂载硬盘后直接在gluster中添加之前的硬盘，因为硬盘下有gluster的隐藏配置文件，直接添加即可。
+！！新装的系统UUID必须和坏的系统UUID一致
 ！！卸载gluster软件时要把cluster相关的软件一并删除掉
 
 
