modify 6.Glusterfs.md for 201901251519

--- a/6.Glusterfs.md
+++ b/6.Glusterfs.md
@@ -450,11 +450,16 @@ gluster volume set gv1 Performance.io-thread-count 20
 直接用RAID的特性对硬盘进行跟换即可。
 
 第二种：当gluster storage1和storage2两台服务器中复制卷storage2服务器/storage/brick2硬盘坏掉时，此时还不会丢失文件，因为storage1服务器/storage/brick2硬盘是好的，怎么恢复处理？
-1. 先移除storage2坏的那块硬盘，然后添加同规格的硬盘，进行xfs文件格式化、挂载。
-2. 在storage1服务器使用命令：getfattr -d -m '.*' /storage/brick2 获取隐藏的gluster配置文件详细信息（-n trusted.glusterfs.volume-id -v 0slEaIKclQQ0GpwUXSYvtHqw== /storage/brick2）
-3. 在storage2服务器/storage/brick2目录上（复制卷的挂载目录）执行：setfattr -n trusted.glusterfs.volume-id -v 0slEaIKclQQ0GpwUXSYvtHqw== /storage/brick2 使新硬盘恢复隐藏的gluster配置文件，
-4. 在使用命令：getfattr -d -m '.*' /storage/brick2 可查看恢复的信息
-5. 重试上面的步骤，把gluster想关的隐藏文件一一恢复，不管gluster文件的顺序，quota限额这项可不用复制，重启gluster服务就会自动同步
+1. 先移除storage2坏的那块硬盘，然后添加同规格的硬盘，进行xfs文件格式化、挂载之前相同目录。
+2. 停掉gluster服务
+3. 在storage1服务器使用命令：getfattr -d -m '.*' /storage/brick2 获取隐藏的gluster配置文件详细信息（-n trusted.glusterfs.volume-id -v 0slEaIKclQQ0GpwUXSYvtHqw== /storage/brick2）
+4. 在storage2服务器/storage/brick2目录上（复制卷的挂载目录）执行：setfattr -n trusted.glusterfs.volume-id -v 0slEaIKclQQ0GpwUXSYvtHqw== /storage/brick2 使新硬盘恢复隐藏的gluster配置文件，
+5. 在使用命令：getfattr -d -m '.*' /storage/brick2 可查看设置的参数信息
+6. 重试上面的步骤，把gluster想关的隐藏文件一一恢复，不管gluster文件的顺序，quota限额这项可不用复制
+7. gluster volume status查看volume的状态时，发现节点2的brick是N，需要删除重建brick，我们需要手动的删掉节点2的brick，在重新建立
+8. 手动删除brick:glustervolume remove-brick gv1  replica 1 clusterFS-node3-salt.jack.com:/storage/brick1 force
+9. 手动添加brick:glustervolume add-brick gv1  replica 2 clusterFS-node3-salt.jack.com:/storage/brick1 force
+10. 这样新更换上的硬盘就会有坏掉那块硬盘上的数据了。
 
 ##一台主机故障
 系统挂了，需要重新安装系统和gluster的软件，建议保存gluster的安装软件，以包以后可以同版本安装
@@ -463,12 +468,20 @@ b) 磁盘阵列多块硬盘丢失，使数据丢失
 c) 系统坏了
 
 解决办法：
-准备一台服务器跟坏的服务器配置一样，至少硬盘大小和数量一样，然后安装系统和gluster软件。再在其他健康的节点上使用命令gluster peer status查看所有的节点UUID，包括坏的那台服务器节点UUID，可以在新安装的这台服务器上修改文件:/var/lib/glusterd/glusterd.info的UUID成之前坏的那台UUID，然后格式化和挂载硬盘，然后执行:gluster volume heal gv2 full启动自动同步修复。
+1. 准备一台服务器跟坏的服务器配置一样，至少硬盘大小和数量一样，然后安装系统和gluster软件。
+2. 再在其他健康的节点上使用命令gluster peer status查看所有的节点UUID，包括坏的那台服务器节点UUID，可以在新安装的这台服务器上修改文件:/var/lib/glusterd/glusterd.info的UUID成之前坏的那台UUID。
+3. 然后格式化和挂载硬盘。
+4. 手动先删除复制卷中的无效birck块
+5. 然后再手动删除信任存储池中的故障主机
+6. 再重新添加故障主机到信任存储池中
+7. 最后再添加brick块即可
+8. 最后自己同步数据到新添加的硬盘当中
+
 ！！注意：如果硬盘没坏，只是系统坏的话，就在修改为UUID，底层格式化和挂载硬盘后直接在gluster中添加之前的硬盘，因为硬盘下有gluster的隐藏配置文件，直接添加即可。
 ！！新装的系统UUID必须和坏的系统UUID一致
 ！！卸载gluster软件时要把cluster相关的软件一并删除掉
 
-
+！！注意：0.0.0.0:49152  10211/glusterfsd 这个服务是当执行：gluster volume start disk后才开启的。
 
  </pre>
 
