modify 6.Glusterfs.md for 201901251552

--- a/6.Glusterfs.md
+++ b/6.Glusterfs.md
@@ -391,6 +391,8 @@ total 36M
 -rw-r-xr-- 1 root root 6.6M Jan 13 22:29 image123.JPG
 -rw-r--r-- 1 root root    3 Jan 13 22:11 tt
 
+！！注意：当添加分布式复制卷成功时，新添加的复制卷默认会同步之前卷的文件夹，之前卷的其他文件不会同步，当你再平衡时文件才会重新平均到其他复制卷中
+
 
 #构建企业级分布式存储
 1.硬件选型
