modify  6.Glusterfs.md

--- a/6.Glusterfs.md
+++ b/6.Glusterfs.md
@@ -149,7 +149,7 @@ tmpfs           184M     0  184M   0% /run/user/0
 127.0.0.1:/gv1   20G  270M   20G   2% /mnt
   18. [root@clusterFS-node1-salt ~]# mount -t glusterfs 127.0.0.1:/gv1 /mnt
   19. 任意一台gluster服务器挂载卷后都可能进行文件拷坝，而且每台gluster服务器都会进行同步数据
-  20. 用nfs方式挂载gluster卷（centos7不支持）：mount -t nfs -o mountproto=tcp 192.168.1.37:/gv1 /mnt
+  20. 用nfs方式挂载gluster卷：mount -t nfs -o mountproto=tcp 192.168.1.37:/gv1 /mnt
   21. 创建复制卷：
 [root@clusterFS-node1-salt ~]# gluster volume create gv2 replica 2 clusterFS-node3-salt.jack.com:/storage/brick1 clusterFS-node4-salt.jack.com:/storage/brick1 force #replica为复制卷，后面的2为复制两个，如果复制3个则后面为3
 volume create: gv2: success: please start the volume to access data
@@ -484,6 +484,16 @@ c) 系统坏了
 ！！卸载gluster软件时要把cluster相关的软件一并删除掉
 
 ！！注意：0.0.0.0:49152  10211/glusterfsd 这个服务是当执行：gluster volume start disk后才开启的。
+
+总结：GlusterFS支持三种客户端类型。Gluster Native Client、NFS和CIFS。Gluster Native Client是在用户空间中运行的基于FUSE的客户端，官方推荐使用Native Client，可以使用GlusterFS的全部功能。
+1. 安装Gluster Native Client软件包：
+#yum install glusterfs glusterfs-fuse attr -y
+
+#查看I/O信息
+--Profile Command 提供接口查看一个卷中的每一个brick的IO信息
+gluster volume profile test-volume start
+gluster volume profile test-volume info
+
 
  </pre>
 
